--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,13 @@
 implement:
-finish todo 
-MAXTEAMS
-hybrid camera
 Blast radius on hitting ground/other stuff
 AI falling off edge
-splitting
+invisible bottom
+fix team counter
+Better/cheaper AI
+make all configs floats
+make speed a config
+uncouple fps and jumping
+prettier eating
 Shrinking map game mode
 Endless Scrolling
 Special movements and attacks
@@ -15,14 +18,10 @@ Non-food objects
 Collecting game mode
 Menu
 Weapons
-Better/cheaper AI
 Biomes
 Build-able structures
 Speed boosts/launchers on ground
 Mining
 Prettier game (this one sucks ass)
 Multiplayer
-Walls on the edge of the map (?)
-
-Questionable upcoming features:
 
